--- a/index.html
+++ b/index.html
@@ -246,9 +246,9 @@
           <h2>Thesis exhibit</h2>
           <div class="f-t-body">
           <div class="f-t-video">
-              <video width="60%">
-                <source src="./capstone_colmar_assets/videos/thesis.mp4" type="video/mp4">
-              </video>
+            <video width="100%" controls>
+              <source src="./capstone_colmar_assets/videos/thesis.mp4" type="video/mp4" />
+            </video> 
             </video>
             <h3>Reimagine urban</h3>
             <p>
@@ -295,3 +295,4 @@
     </main>
   </body>
 </html>
+
